Final do Stage 3, aplicativo de envio de mensagens em real time

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "nwlheatapp",
     "slug": "nwlheatapp",
     "version": "1.0.0",
+    "scheme": "nwlheatapp",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -27,6 +28,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "packagerOpts": {
+      "config": "metro.config.js"
     }
   }
 }
