--- a/package.json
+++ b/package.json
@@ -9,20 +9,31 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "axios": "^0.23.0",
     "expo": "~43.0.0",
     "expo-app-loading": "~1.2.1",
+    "expo-auth-session": "~3.4.2",
     "expo-font": "~10.0.3",
+    "expo-linear-gradient": "~10.0.3",
+    "expo-random": "~12.0.0",
     "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
+    "moti": "^0.16.0",
+    "react": "17.0.2",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-web": "0.17.1"
+    "react-native": "0.66.1",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "2.3.0-beta.1",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "0.17.1",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@types/react": "^17.0.31",
+    "@types/react-native": "^0.66.0",
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "^4.4.4"
   },
   "private": true
 }
